[project]
name = "project"
version = "0.1.0"

requires-python = ">=3.13,<3.14"
dependencies = [
    "jupyter>=1.1.1",
    "torch==2.8.0+cu128",
    "unsloth[windows, cu128-ampere-torch280]",
]

[dependency-groups]
dev = ["ruff>=0.12.10"]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
unsloth = { git = "https://github.com/unslothai/unsloth.git", rev = "07a7ff47b1b2b37c088b8e0d7ed7bf8710d9aa22" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
